--- a/themes/yesplease/templates/_menu.tmpl
+++ b/themes/yesplease/templates/_menu.tmpl
@@ -1,11 +1,5 @@
-## Menu toggle
-<a href="#menu" id="menuLink" class="menu-link">
-    ## Hamburger icon
-    <span></span>
-</a>
-
 <div id="menu">
-    <div class="pure-menu">
+    <div class="pure-menu pure-menu-horizontal pure-menu-scrollable">
         <a class="pure-menu-heading" href="/">${blog_title}</a>
 
         <ul class="pure-menu-list">
