--- a/themes/yesplease/templates/_style.tmpl
+++ b/themes/yesplease/templates/_style.tmpl
@@ -6,6 +6,6 @@
   <link rel="stylesheet" href="/assets/css/font-awesome.css"/>
   <link rel="stylesheet" href="/assets/css/pure.css"/>
   <link rel="stylesheet" href="/assets/css/grids-responsive.css"/>
-  <link rel="stylesheet" href="/assets/css/side-menu.css"/>
+  <link rel="stylesheet" href="/assets/css/navbar.css"/>
   <link rel="stylesheet" href="/assets/css/site.css"/>
 % endif
