--- a/themes/yesplease/templates/_menu.tmpl
+++ b/themes/yesplease/templates/_menu.tmpl
@@ -1,25 +1,22 @@
 ## Menu toggle
-<a href="#menu" id="menuLink" class="menu-link">
-    ## Hamburger icon
-    <span></span>
-</a>
-
-<div id="menu">
-    <div class="pure-menu">
-        <a class="pure-menu-heading" href="/">${blog_title}</a>
-
-        <ul class="pure-menu-list">
-
-          ## Links in sidebar are defined in conf.py as NAVIGATION_LINKS
-          % for url, label in navigation_links[lang]:
-            <li class="pure-menu-item">
-              <a class="pure-menu-link" href="${url}">${label}</a>
-            </li>
-          % endfor
-
-          ## TODO: add social media and rss icon links
-
-          ${template_hooks['menu']()}
-        </ul>
-    </div>
+<div class="navbar-wrapper pure-g" id="menu">
+  <div class="pure-u-1 pure-u-md-1-3">
+      <div class="pure-menu">
+          <a href="#" class="pure-menu-heading navbar-brand">Pittsburgh Python</a>
+          <a href="#" class="navbar-toggle" id="toggle"><s class="bar"></s><s class="bar"></s><s class="bar"></s></a>
+      </div>
+  </div>
+  <div class="pure-u-1 pure-u-md-1-3">
+      <div class="pure-menu pure-menu-horizontal navbar-can-transform">
+          <ul class="pure-menu-list">
+              ## Links in menu are defined in conf.py as NAVIGATION_LINKS
+              % for url, label in navigation_links[lang]:
+                <li class="pure-menu-item">
+                  <a class="pure-menu-link" href="${url}">${label}</a>
+                </li>
+              % endfor
+              ${template_hooks['menu']()}
+          </ul>
+      </div>
+  </div>
 </div>
